add: functionality for checkout page and added styles

--- a/react-ztm/capStone/src/components/checkout-item/checkout.styles.scss
+++ b/react-ztm/capStone/src/components/checkout-item/checkout.styles.scss
@@ -27,10 +27,13 @@
 
     .arrow {
       cursor: pointer;
-    }
 
+      &::selection {
+        background-color: transparent;
+      }
+    }
     .value {
-      margin: 0 10px;
+      margin: 0px 10px;
     }
   }
 
